/* Rürikan dinastii */ вот это да, я и не знала... (o_O)

--- a/Venälaižen_valdkundan_pämehed.mw
+++ b/Venälaižen_valdkundan_pämehed.mw
@@ -53,7 +53,8 @@ Se om '''Venälaižen valdkundan pämehiden''' nimikirjutez.
 # [[Vasilii II Pimed]] (1425—1462)
 # [[Ivan III Sur']] (1462—1505)
 # [[Vasilii III]] (1505—1533)
-# [[Ivan IV Äred]] (1533—1584)
+# [[Ivan IV Äred]] (1533—1575, 1576—1584)
+# [[Simeon Bekbulatovič]] (1575—1576)
 # [[Födor I Sor'mel Tehtud]] (1584—1598)
 
 == [[Smut|Smutan pord]] ==
