--- a/Venälaižen_valdkundan_pämehed.mw
+++ b/Venälaižen_valdkundan_pämehed.mw
@@ -62,7 +62,7 @@ Se om '''Venälaižen valdkundan pämehiden''' nimikirjutez.
 # [[Födor II]] (1605)
 # [[Dmitrii-kelastai]] (1605—1606)
 # [[Vasilii Šuiskii]] (1606—1610)
-# [[Vladislav IV]] (1610—1613; faktižikš, [[Seičemenbajar'kund]]an {{k|Семибоярщины}} pordas)
+# [[Vladislav IV Vaza]] (1610—1613; faktižikš, [[Seičemenbajar'kund]]an {{k|Семибоярщины}} pordas)
 
 == [[Romanovan dinastii]] ==
 # [[Mihail]] (1613—1645)
