/* Smutan pord */ чуть больше месяца правила, даже Фёдор II больше...

--- a/Venälaižen_valdkundan_pämehed.mw
+++ b/Venälaižen_valdkundan_pämehed.mw
@@ -58,6 +58,7 @@ Se om '''Venälaižen valdkundan pämehiden''' nimikirjutez.
 # [[Födor I Sor'mel Tehtud]] (1584—1598)
 
 == [[Smut|Smutan pord]] ==
+# [[Irina Godunova]] (1598)
 # [[Boris Godunov]] (1598—1605)
 # [[Födor II]] (1605)
 # [[Dmitrii-kelastai]] (1605—1606)
