--- a/Venälaižen_valdkundan_pämehed.mw
+++ b/Venälaižen_valdkundan_pämehed.mw
@@ -66,23 +66,23 @@ Se om '''Venälaižen valdkundan pämehiden''' nimikirjutez.
 # [[Vladislav IV Vaza]] (1610—1613; faktižikš, [[Seičemenbajar'kund]]an {{k|Семибоярщины}} pordas)
 
 == [[Romanovan dinastii]] ==
-# [[Mihail]] (1613—1645)
-# [[Aleksei]] (1645—1676)
+# [[Mihail Födorovič]] (1613—1645)
+# [[Aleksei Vaikneine]] (1645—1676)
 # [[Födor III]] (1676—1682)
 # [[Petr I Sur']] (1682—1725)
 # [[Jekaterina I]] (1725—1727)
 # [[Petr II]] (1727—1730)
-# [[Anna]] (1730—1740)
+# [[Anna Ioannovna]] (1730—1740)
 # [[Ivan VI]] (1740—1741)
-# [[Jelizaveta]] (1741—1762)
+# [[Jelizaveta Petrovna]] (1741—1762)
 # [[Petr III]] (1762)
-# [[Jekaterina II]] (1762—1796)
-# [[Pavel]] (1796—1801)
+# [[Jekaterina II Sur']] (1762—1796)
+# [[Pavel Pertovič]] (1796—1801)
 # [[Aleksandr I]] (1801—1825)
 # [[Nikolai I]] (1825—1855)
-# [[Aleksandr II]] (1855—1881)
-# [[Aleksandr III]] (1881—1894)
-# [[Nikolai II]] (1894—1917)
+# [[Aleksandr II Päzutai]] (1855—1881)
+# [[Aleksandr III Kožutai]] (1881—1894)
+# [[Nikolai II Verekaz]] (1894—1917)
 
 == [[NSTÜ|Nevondkundaližed]] päsekretarid (lugemata [[Venäman Pordaigaine ohjastuz|Pordaigaižen ohjastusen]]) ==
 # [[Lenin Vladimir|Vladimir Lenin]] (1917—1924)
