/* Nevondkundaližed päsekretarid (lugemata Pordaigaižen ohjastusen) */

--- a/Venälaižen_valdkundan_pämehed.mw
+++ b/Venälaižen_valdkundan_pämehed.mw
@@ -85,13 +85,13 @@ Se om '''Venälaižen valdkundan pämehiden''' nimikirjutez.
 # [[Nikolai II Verekaz]] (1894—1917)
 
 == [[NSTÜ|Nevondkundaližed]] päsekretarid (lugemata [[Venäman Pordaigaine ohjastuz|Pordaigaižen ohjastusen]]) ==
-# [[Lenin Vladimir|Vladimir Lenin]] (1917—1924)
-# [[Stalin Iosif|Iosif Stalin]] (1924—1953)
-# [[Hruščov Nikita|Nikita Hruščov]] (1953—1964)
-# [[Brežnev Leonid|Leonid Brežnev]] (1964—1982)
-# [[Andropov Jurii|Jurii Andropov]] (1982—1984)
-# [[Černenko Konstantin|Konstantin Černenko]] (1984—1985)
-# [[Gorbačov Mihail|Mihail Gorbačov]] (1985—1991)
+# [[Lenin Vladimir|Vladimir Il'jič Lenin]] (1917—1924)
+# [[Stalin Iosif|Iosif Vissarionovič Stalin]] (1924—1953)
+# [[Hruščov Nikita|Nikita Sergejevič Hruščov]] (1953—1964)
+# [[Brežnev Leonid|Leonid Il'jič Brežnev]] (1964—1982)
+# [[Andropov Jurii|Jurii Vladimirovič Andropov]] (1982—1984)
+# [[Černenko Konstantin|Konstantin Ustinovič Černenko]] (1984—1985)
+# [[Gorbačov Mihail|Mihail Sergejevič Gorbačov]] (1985—1991)
 
 == Nügüd'aigaine [[Venäma]] ==
 # [[Jel'cin Boris|Boris Jel'cin]] (1991—2000<!--"отрёкся" ровно в полночь нового тысячелетия; поэтому пишу 2000-->)
