--- a/Venälaižen_valdkundan_pämehed.mw
+++ b/Venälaižen_valdkundan_pämehed.mw
@@ -94,10 +94,10 @@ Se om '''Venälaižen valdkundan pämehiden''' nimikirjutez.
 # [[Gorbačov Mihail|Mihail Sergejevič Gorbačov]] (1985—1991)
 
 == Nügüd'aigaine [[Venäma]] ==
-# [[Jel'cin Boris|Boris Jel'cin]] (1991—2000<!--"отрёкся" ровно в полночь нового тысячелетия; поэтому пишу 2000-->)
-# [[Putin Vladimir|Vladimir Putin]] (2000—2008, 2012— )
-# [[Medvedev Dmitrii|Dmitrii Medvedev]] (2008—2012)
+# [[Jel'cin Boris|Boris Nikolajevič Jel'cin]] (1991—2000<!--"отрёкся" ровно в полночь нового тысячелетия; поэтому пишу 2000-->)
+# [[Putin Vladimir|Vladimir Vladimirovič Putin]] (2000—2008, 2012—n. a.)<!--Учитывая оформление списка Рюриковичей, считаю нужным записывать именно таким образом. Иначе придётся переделывать вышеназванный список, не думаю, что это имеет смысл.-->
+# [[Medvedev Dmitrii|Dmitrii Anatol'jevič Medvedev]] (2008—2012)
 
 [[Kategorii:Nimikirjutesed]]
-[[Kategorii:Venäma]]
+[[Kategorii:Venäma|p]]
 [[Kategorii:Istorii]]
