Штандарты вместо флага. По-моему всё. У нас самый полный и продуманный список российских правителей, есть чем гордиться.

--- a/Venälaižen_valdkundan_pämehed.mw
+++ b/Venälaižen_valdkundan_pämehed.mw
@@ -1,5 +1,8 @@
-[[Fail:Flag of Russia.svg|border|right|250px]]
-Se om '''Venälaižen valdkundan pämehiden''' nimikirjutez.
+[[Fail:Standard of the President of the Russian Federation.svg|border|right|250px]]
+[[Fail:Standard of the President of the Soviet Union (fictional).svg|border|right|250px]]
+[[Fail:Imperial Standard of the Emperor of Russia (1858–1917).svg|border|right|250px]]
+[[Fail:Flag of Tzar of Muscovia.svg|border|right|250px]]
+Se om '''täuz' Venälaižen valdkundan pämehiden nimikirjutez'''.
 
 == [[Rürikan dinastii]] ==
 # [[Rürik]] (862—879)
