--- a/Bel'gii.mw
+++ b/Bel'gii.mw
@@ -10,7 +10,7 @@
 | Pind = 30 528
 | Kart = EU-Belgium.svg
 | Kel' = [[alaman kel'|alaman]], [[francijan kel'|francijan]], [[saksan kel'|saksan]]
-| Valdkundan pämez' = [[Al'bert II]]
+| Valdkundan pämez' = [[Filipp (Bel'gijan kunigaz)|Filipp]]
 | Päministr = [[Di Rupo Eliot|Eliot di Rupo]]
 | Religii = [[ateizm]], [[hristanuskond]]
 | Valüt = [[evro]]
@@ -18,7 +18,7 @@
 | Telefonkod = +46
 | Aigvö = [[UTC]]+1
 }}
-'''Bel'gii''' ([[Niderlandan kel'|niderl.]]: ''België'', fr.: ''Belgique'', [[Saksan kel'|saksan]]: ''Belgien'') om valdkund Evropas, Pohjoižen meren randal, [[EÜ]]n ühtnii. Bel'gijan oma mavaldkundröunad [[Alamad|Alamaidenke]], [[Germanii|Germanijanke]], [[Lüksemburg]]anke da [[Francii|Francijanke]].
+'''Bel'gii''' ([[Alaman kel'|alam.]]: ''België'', [[francijan kel'|franc.]]: ''Belgique'', [[Saksan kel'|saks.]]: ''Belgien'') om valdkund Evropas, Pohjoižen meren randal, [[EÜ]]n ühtnii. Bel'gijan oma mavaldkundröunad [[Alamad|Alamaidenke]], [[Germanii|Germanijanke]], [[Lüksemburg]]anke da [[Francii|Francijanke]].
 
 Pälidn — [[Brüssel']].</br>
 Eläjiden lugu — 10,5 mil.</br>
