/* Nevondkundaližed päsekretarid (lugemata Pordaigaižen ohjastusen) */

--- a/Venälaižen_valdkundan_pämehed.mw
+++ b/Venälaižen_valdkundan_pämehed.mw
@@ -87,7 +87,11 @@ Se om '''täuz' Venälaižen valdkundan pämehiden nimikirjutez'''.
 # [[Aleksandr III Kožutai]] (1881—1894)
 # [[Nikolai II Verekaz]] (1894—1917)
 
-== [[NSTÜ|Nevondkundaližed]] päsekretarid (lugemata [[Venäman Pordaigaine ohjastuz|Pordaigaižen ohjastusen]]) ==
+== [[Venäman Pordaigaine ohjastuz]] ==
+# [[L'vov Georgii|Georgii Evgen'jevič L'vov]] (1917)
+# [[Kerenskii Aleksandr|Aleksandr Födorovič Kerenskii]] (1917)
+
+== [[NSTÜ|Nevondkundaližed]] päsekretarid ==
 # [[Lenin Vladimir|Vladimir Il'jič Lenin]] (1917—1924)
 # [[Stalin Iosif|Iosif Vissarionovič Stalin]] (1924—1953)
 # [[Hruščov Nikita|Nikita Sergejevič Hruščov]] (1953—1964)
