*Empty MediaWiki Message*

--- a/Latinan_frazoiden_nimikirjutez.mw
+++ b/Latinan_frazoiden_nimikirjutez.mw
@@ -103,10 +103,15 @@
 
 
 === N ===
-
+* '''Nil inultum remanebit''' — «ni-mi ei jäta ustavzoitmata»
+* '''Nolens volens''' — «vast tahtod»
+* '''Nomen est omen''' — «nimi om znam»
+* '''[[Nota bene]]''' — «kärouda homaičust»
 
 === O ===
-
+* '''[[Omnes vulnerant, ultima necat]]''' — «kaikutte [čas] satatab, jäl'gmaine rikob»
+* '''[[Omnia mea mecum porto]]''' — «kaik ičein kandan kerdalaz»
+* '''Omnia praeclara rara''' — «kaik čomakulu om harv»
 
 === P ===
 * '''[[Pecunia non olet]]''' — «rahad ei haigoi»
