*Empty MediaWiki Message*

--- a/Makenzen_August_fon.mw
+++ b/Makenzen_August_fon.mw
@@ -1,5 +1,5 @@
 [[Fail:August von Mackensen fieldmarshal.jpg|thumb|right|200px|August von Mackensen]]
-'''August fon Makenzen''' ([[Germanijan kel'|germ.]] ''August von Mackensen''; [[6. tal'vku]] 1849, Lipnic, [[Saksonijan provincii|Saksonii]] — [[8 kül'mku]] 1945, Burghorn) oli [[Germanijan imperii|germanijalaine]] general-fel'dmaršal (22. kezaku 1915) i voinpämez', [[Ezmäine mail'man voin|Ezmäižen mail'man voinan]] ühtnik.
+'''August fon Makenzen''' ([[Germanijan kel'|germ.]] ''August von Mackensen''; [[6. tal'vku]] 1849, Lipnic, [[Saksonijan provincii|Saksonii]] — [[8 kül'mku]] 1945, Burghorn) oli [[Germanijan imperii|germanijalaine]] jeneral-fel'dmaršal (22. kezaku 1915) i voinpämez', [[Ezmäine mail'man voin|Ezmäižen mail'man voinan]] ühtnik.
 
 {{stub}}
 
