*Empty MediaWiki Message*

--- a/Litvanma.mw
+++ b/Litvanma.mw
@@ -20,7 +20,7 @@ Eläjiden lugu — 3,2 mil.</br>
 Pind — 65200 km<sup>2</sup>
 
 == Istorii ==
-Ezmäine johtutez keskaigaižes Litvanmas oli vl. 1009. XIII voz'sadalesai germanižed ricer'kundad (ordenad) ladiba anastada Litvanmad i toda sinnä hristanuskondad, no satusita. Litvanma tegihe hristianižeks vaiše XIV voz'sadan lopuks. Sil aigal se oli joüks' surembaižiš valdkundoišpäi päivlaskmaižes Evropas. Vl 1569 Litvanma ühtištui Pol'šanmanke Pol'šanlitvanmaha (ninga nimitadud Lüblinan Unii). Vl 1795 kaik Litvanma tegihe Venälaižen Imperijan palaks. 18.02.1918 Litvanman nevonkund (kaikiden litvalaižiden ezitai organ) om tedotanu Litvanman ripmatomut. Sil aigal kaik Litvanma oli völ okkupiruidud germanižil sodavägil (oli [[Ezmäine mail'mansoda]]). Jäl'ges germanižiden sodavägiden lähtendad pol'šalaižed nacionalistad tegiba Vil'nüsha kumaiduz, kudamban ezinenas oli general Želigovski. Litvanman ohjastuz pageni [[Kaunas]]ha. Kaunas oli Litvanman [[pälidn]]an vodelesai 1940.
+Ezmäine johtutez keskaigaižes Litvanmas oli vl. 1009. XIII voz'sadalesai germanižed ricer'kundad (ordenad) ladiba anastada Litvanmad i toda sinnä hristanuskondad, no satusita. Litvanma tegihe hristianižeks vaiše XIV voz'sadan lopuks. Sil aigal se oli joüks' surembaižiš valdkundoišpäi päivlaskmaižes Evropas. Vl 1569 Litvanma ühtištui Pol'šanmanke Pol'šanlitvanmaha (ninga nimitadud Lüblinan Unii). Vl 1795 kaik Litvanma tegihe Venälaižen Imperijan palaks. 18.02.1918 Litvanman nevonkund (kaikiden litvalaižiden ezitai organ) om tedotanu Litvanman ripmatomut. Sil aigal kaik Litvanma oli völ okkupiruidud germanižil sodavägil (oli [[Ezmäine mail'mansoda]]). Jäl'ges germanižiden sodavägiden lähtendad pol'šalaižed nacionalistad tegiba Vil'nüsha kumaiduz, kudamban ezinenas oli jeneral Želigovski. Litvanman ohjastuz pageni [[Kaunas]]ha. Kaunas oli Litvanman [[pälidn]]an vodelesai 1940.
 
 Vl 1940 Litvanman okkupirui Nevondkundaline Ühtištuz; nece oli Molotovan-Ribbantropan paktan oiged rezul’tat. Vozil 1941 — 1944 Litvanman okkupirui nacional-socialistine Germanijanma. Vl 1944 Litvanman möst anasti Nevondkundaline Ühtištuz.
 
