*Empty MediaWiki Message*

--- a/Vepsän_küläd.mw
+++ b/Vepsän_küläd.mw
@@ -212,3 +212,5 @@ Se om eläbiden '''[[Vepsänma|vepsän küliden]] nimikirjutez''' regionoiden i 
 
 [[Kategorii:Vepsän küläd|*]]
 [[Kategorii:Nimikirjutesed]]
+
+[[mhr:Вепс илымверла]]
