*Empty MediaWiki Message*

--- a/Venäman_rubl'.mw
+++ b/Venäman_rubl'.mw
@@ -21,7 +21,7 @@ Venäman rubl' kävutadas mugažo [[Abhazijan Tazovaldkund|Abhazijan]] da [[Suvi
 |-
 | align="right"|[[Fail:Banknote_500_rubles_(1997)_front.jpg|240px]] || align="left"|[[Fail:Banknote_500_rubles_(1997)_back.jpg|240px]] || [[Arhangel'sk]]an mel'heižtahod:<br />'''A:''' [[Sur' Petr|Suren Petran]] muštpacaz i [[purehlaiv]] portas<br />'''R:''' [[Soloveckii Jumalankodi]]
 |-
-| align="right"|[[Fail:Banknote_1000_rubles_2004_front.jpg|240px]] ||align="left"|[[Fail:Banknote_1000_rubles_2004_back.jpg|240px]] || [[Jaroskavl'|Jaroslavlin]] mel'heižtahod:<br />'''A:''' [[Elonmelev Jaroslav|Elonmelevan Jaroslavan]] muštpacaz<br />'''R:''' Joanan Predtečan (Edelkävujan) jumalanpert'
+| align="right"|[[Fail:Banknote_1000_rubles_2004_front.jpg|240px]] ||align="left"|[[Fail:Banknote_1000_rubles_2004_back.jpg|240px]] || [[Jaroslavl'|Jaroslavlin]] mel'heižtahod:<br />'''A:''' [[Elonmelev Jaroslav|Elonmelevan Jaroslavan]] muštpacaz<br />'''R:''' Joanan Predtečan (Edelkävujan) jumalanpert'
 |-
 | align="right"|[[Fail:Banknote 5000 rubles (1997) front.jpg|240px]] ||align="left"|[[Fail:Banknote 5000 rubles (1997) back.jpg|240px]] || [[Habarovsk]]an mel'heižtahod<br />'''A:''' [[Murav'jov-Amurskii|Murav'jov-Amurskijan]] muštpacaz<br />'''R:''' Sild päliči [[Amur]]-joges 
 |}
