*Empty MediaWiki Message*

--- a/Jaroslavl'.mw
+++ b/Jaroslavl'.mw
@@ -1,5 +1,60 @@
+{{Eländpunkt
+ | Nimi = Jaroslavl'<br />Ярославль
+ | Lidnanznam = Coat of Arms of Yaroslavl (1995).png
+ | Flag = Flag of Yaroslavl.png
+ | Lidnanznam text = Jaroslavlin znam
+ | Flag text = Jaroslavlin flag
+ | Valdkund = Venäma
+ | Eläjiden lugu = 595 155<ref>[http://www.gks.ru/wps/wcm/connect/rosstat_main/rosstat/ru/statistics/publications/catalog/afc8ea004d56a39ab251f2bafc3a6fce Rosstat. Venäman Federacijan municipaližiden ühtnikoiden ristitišton lugu vl. 2012 vilukun 1. päivän]</ref></small>
+ | Voz' = 2012
+ | Pind = 205<ref>[http://www.city-yar.ru/data/Unsorted/aspekty_9_mes.2009.doc Jaroslavlin pind]</ref>
+ | Fail = 
+ | Pämez' = Urlašov Evgenii Robertovič; varapämez' Nečajev Aleksandr<ref>[http://www.gazeta.ru/politics/news/2013/07/15/n_3042453.shtml Мэрия Ярославля: обязанности мэра исполняет Нечаев. — gazeta.ru]</ref>
+ | Telefonkod = +7-4852
+ | Avtokod = 76
+ | Aigvö = [[UTC]]+4
+}}
+[[Fail:Yaroslavl-strelka.JPG|pisi|hura|320px|Emäganpäivän päjumalanpert']]
 '''Jaroslavl'''' ([[Venäkel'|ven]].: ''Ярославль'') om lidn [[Venäma]]s. Se om [[Jaroslavlin agj]]an keskuz.
+
+Sijadase [[Volg]]an molembil randoil, sen [[Kotorosl']]-jogenke ühthejoksmusel. Mad [[Moskv]]ahasai om 282 km.
+
+Lidn om avtote- da raudtesol'm. Jaroslavliš oma jogiport da Tunošn-lendimport.
+
+== Administrativine jaguz ==
+Jaroslavliš om 6 rajonad:
+* Dzeržinskijan rajon
+* Volgantagaine rajon
+* Kirovan rajon
+* Ruskedperekopan rajon
+* Leninan rajon
+* Frunzen rajon.
+
+== Sebruzlidnad ==
+Jaroslavlin sebruzlidnoiden nimikirjutez kožundkirjutesiden ühthižtöiš allekirjutamižen järgendusen mödhe<ref>[http://www.city-yar.ru/home/city/international_relations.html Jaroslavl'-lidnan oficialine sait — Rahvahidenkeskeižed sidod]</ref>:
+
+* {{FIN|#}} [[Jüväskülä]], [[Suomenma]] (1966)
+* {{FRA|#}} [[Puatje]], [[Francii]] (1970)
+* {{POR|#}} [[Koimbr]], [[Portugalii]] (1984)
+* {{GER|#}} [[Kassel']], [[Germanii]] (1988)
+* {{USA|#}} [[Berlington (Vermont)|Berlington]], [[Vermont]], [[AÜV]] (1988)
+* {{GBR|#}} [[Ekseter]], [[Anglii]], [[Sur' Britanii]] (1989)
+* {{GER|#}} [[Hanau]], [[Germanii]] (1994)
+* {{RUS|#}} [[Petroskoi]], [[Venäma]] (2003)
+* {{Флаг Коста-Рики}} [[San Ramon (Kosta Rika)|San Ramon]], [[Kosta Rika]] (2013)<ref name="cost_rica">[http://www.city-yar.ru/home/news/single/123406.html У Ярославля появилось ещё два города побратима — Сан-Рамон и Либерия. Соответствующие соглашения о взаимном сотрудничестве подписаны мэром города Евгением Урлашовым в ходе поездки в составе официальной делегации в Коста-Рику] // city-yar.ru.</ref>
+* {{Флаг Коста-Рики}} [[Liberii (Kosta Rika)|Liberii]], [[Kosta Rika]] (2013)<ref name="cost_rica" />
+
+Jaroslavliš om [[Germanii|Germanijan]], [[Francii|Francijan]] da [[Anglii|Anglijan]] kožmusen pertid.
+
+== Homaitused ==
+{{Reflist}}
+
+== Irdkosketused ==
+* [http://www.city-yar.ru/ Jaroslavlin lidnan ičeohjandusen aluskundoiden oficialine sait]
+* [http://www.yarvisit.ru/ Jaroslavlin oficialine turistkart]
+
 {{stub}}
 
 [[Kategorii:Venäman lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
+[[Kategorii:Jaroslavlin agj]]
