--- a/Jaroslavl'.mw
+++ b/Jaroslavl'.mw
@@ -41,8 +41,8 @@ Jaroslavlin sebruzlidnoiden nimikirjutez kožundkirjutesiden ühthižtöiš alle
 * {{GBR|#}} [[Ekseter]], [[Anglii]], [[Sur' Britanii]] (1989)
 * {{GER|#}} [[Hanau]], [[Germanii]] (1994)
 * {{RUS|#}} [[Petroskoi]], [[Venäma]] (2003)
-* {{Флаг Коста-Рики}} [[San Ramon (Kosta Rika)|San Ramon]], [[Kosta Rika]] (2013)<ref name="cost_rica">[http://www.city-yar.ru/home/news/single/123406.html У Ярославля появилось ещё два города побратима — Сан-Рамон и Либерия. Соответствующие соглашения о взаимном сотрудничестве подписаны мэром города Евгением Урлашовым в ходе поездки в составе официальной делегации в Коста-Рику] // city-yar.ru.</ref>
-* {{Флаг Коста-Рики}} [[Liberii (Kosta Rika)|Liberii]], [[Kosta Rika]] (2013)<ref name="cost_rica" />
+* {{CRI|#}} [[San Ramon (Kosta Rika)|San Ramon]], [[Kosta Rika]] (2013)<ref name="cost_rica">[http://www.city-yar.ru/home/news/single/123406.html У Ярославля появилось ещё два города побратима — Сан-Рамон и Либерия. Соответствующие соглашения о взаимном сотрудничестве подписаны мэром города Евгением Урлашовым в ходе поездки в составе официальной делегации в Коста-Рику] // city-yar.ru.</ref>
+* {{CRI|#}} [[Liberii (Kosta Rika)|Liberii]], [[Kosta Rika]] (2013)<ref name="cost_rica" />
 
 Jaroslavliš om [[Germanii|Germanijan]], [[Francii|Francijan]] da [[Anglii|Anglijan]] kožmusen pertid.
 
