--- a/Breivik_Anders_Bering.mw
+++ b/Breivik_Anders_Bering.mw
@@ -1,4 +1,5 @@
-'''Anders Bering Breivik''' ([[norvegijan kel'|norv.]]: ''Anders Behring Breivik''; sünd. [[13. uhoku]] [[1979]], [[Oslo]], [[Norvegii]]) om norvegijalaine terrorist da nacionalist. Rikoi 77 ristitud [[2011]]-žes vodes, [[22. heinku]]s.
+'''Anders Bering Breivik''' ([[norvegijan kel'|norv.]]: ''Anders Behring Breivik''; sünd. [[13. uhoku]] [[1979]], [[Oslo]], [[Norvegii]]) om norvegijalaine terrorist, nacionalist da meletoi. Rikoi 77 ristitud [[2011]]-žes vodes, [[22. heinku]]s.
 {{stub}}
 
 [[Kategorii:Terroristad]]
+[[Kategorii:Nacionalistad]]
