*Empty MediaWiki Message*

--- a/Olud.mw
+++ b/Olud.mw
@@ -8,3 +8,4 @@ Olud om koumanz' populärine jom mail'mas ([[vezi|veden]] da [[čai|čajan]] jä
 {{stub}}
 
 [[Kategorii:Alkogoližed jomad]]
+[[Kategorii:Olud|*]]
