--- a/Letojanni_(stancii).mw
+++ b/Letojanni_(stancii).mw
@@ -1,5 +1,5 @@
 [[Fail:Letojanni RFI Train Station - 1st Platform.jpg|thumb|right|250px|Letojanni-stancii]]
-'''Stacione di Letojanni''' ([[italijan kel'|ital.]]: ''Stazione di Letojanni'') om [[raudtestancii]] [[Italii|Italijas]], [[Messin—Sirakuzad-linii|Messin—Sirakuzad-linijas]]. Om [[Letojanni]]-kommunan südäimes ([[Sicilii|Sicilijas]]).
+'''Stacione di Letojanni''' ([[italijan kel'|ital.]]: ''Stazione di Letojanni'') om [[raudtestancii]] [[Italii|Italijas]], [[Messin—Sirakuz-linii|Messin—Sirakuzad-linijas]]. Om [[Letojanni]]-kommunan südäimes ([[Sicilii|Sicilijas]]).
 
 Om kaks' platformad.
 {{stub}}
