*Empty MediaWiki Message*

--- a/Tabani.mw
+++ b/Tabani.mw
@@ -15,7 +15,7 @@
 }}
 '''Tabani''' ([[romanijan kel'|rom.]]: ''Tabani'', [[ukrainan kel'|ukr.]]: ''Табань'') om külä [[Moldov]]an pohjoižes.
 
-Tabanin eläjiden lugu om 3,131 ristitud (2004).
+Tabanin eläjiden lugu om 3,131 ristitud (2004). Pämez' om Georgii Gaina.
 {{stub}}
 
 [[Kategorii:Moldovan küläd]]
