--- a/Iden_(Vajoming).mw
+++ b/Iden_(Vajoming).mw
@@ -1,3 +1,4 @@
+{{tärtused|Iden}}
 {{Eländpunkt
  | Nimi = Iden<br />Eden
  | Lidnanznam = 
@@ -20,5 +21,3 @@ Pind om läz 174 km². Idenan eläjiden lugu oli 535 ristitud 2010-žes vodes.
 
 [[Kategorii:Ristitištlugemižen tahondad AÜV:oiš]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
-
-[[es:Eden (Wyoming)]]
