*Empty MediaWiki Message*

--- a/Jašdären_Iona.mw
+++ b/Jašdären_Iona.mw
@@ -1,4 +1,7 @@
+[[Fail:GpS-zq2HluU.jpg|thumb|right|250px|Pühämehen jumalaine]]
 '''Iona Jašdären (Jašozeron)''' ([[venäkel'|ven.]]: ''Иона Яшезерский''; sünd. [[1592]], [[Šokš]]) oli venäläine [[Ortodoksine hristanuskond‎|ortodoksine]] pühämez', [[Aleksandr Süvären|Aleksandran Süvärenan]] openik. [[Vepsläižed|Vepsläine]].
+
+Jašdären Ionan muštonpäiv ([[5. reduku]]) linni vepsän rahvahanpraznikaks.
 {{stub}}
 
 [[Kategorii:Vepsän pühämehed]]
