сильно смущает, особенно когда используешь церковные имена в тексте

--- a/Kall'_(külä).mw
+++ b/Kall'_(külä).mw
@@ -18,7 +18,7 @@
 
 Külän eläjiden lugu oli 35 ristitud 2007-žes vodes, enambuz heišpäi — etnižed [[vepsläižed]] (19. voz'sadan lopindal kaikil eläjil oli vepsän augotižlibund).
 
-Kall'os om [[Dmitrii Solunin|ph. Dmitrijan]] jumalanpert', kudamb om saudud vl [[1783]]. Külä sai ičeze vepsän nimen järgeližetoman kall'sel'gan tagapäi läheli eländpunktad, kudamb om atipine reljef sile tahondale. Se om 1,4. kilometroiden pitte, i om pordhan korktuz 50 metroihesai. Nece kall'sel'g om [[Venäman eriline varatud londuzterritorii]].
+Kall'os om [[Solunin Dmitrii|ph. Dmitrijan]] jumalanpert', kudamb om saudud vl [[1783]]. Külä sai ičeze vepsän nimen järgeližetoman kall'sel'gan tagapäi läheli eländpunktad, kudamb om atipine reljef sile tahondale. Se om 1,4. kilometroiden pitte, i om pordhan korktuz 50 metroihesai. Nece kall'sel'g om [[Venäman eriline varatud londuzterritorii]].
 {{stub}}
 
 [[Kategorii:Vepsän küläd]]
