--- a/Vepsläižed.mw
+++ b/Vepsläižed.mw
@@ -114,8 +114,8 @@ Vepsän rahvahan amuižes istorijas tetas lüjas vähä.
 [[Venäman imperii|Venäman imperijan]] eläjiden lugemižen mödhe valdkundas oli 25 820 vepsläšt.
 
 == Tetabad vepsläižed ==
-* [[Aleksandr Süvären]] — venäläine ortodoksine pühämez', igumen.
-* [[Iona Jašdären|Iona Jašdären (Jašozeran)]] — venäläine ortodoksine pühämez'
+* [[Süvären Aleksandr]] — venäläine ortodoksine pühämez', igumen.
+* [[Jašdären Iona]] — venäläine ortodoksine pühämez'
 * [[Strogalščikova Zinaida|Zinaida Strogalščikova]] — politikanak.
 * [[Lisicina Anna|Anna Lisicina]] — [[Karjalaiž-Suomalaine Nevondkundaline Socialistine tazovaldkund|Karjalaiž-Suomalaižen Nevondkundaližen Socialistižen tazovaldkundan]] Kommunistižen partijan keskuzkomitetan sidonik, partizan. Hän om Nevondkundaližen Ühtištusen vägimez'.
 * [[Abramov Nikolai|Nikolai Abramov]] — vepsän runokirjutai, lehtezmez' da aktör.
