*Empty MediaWiki Message*

--- a/Süvären_Aleksandr.mw
+++ b/Süvären_Aleksandr.mw
@@ -1,5 +1,5 @@
-[[Fail:Vission of st. Alexander.jpg|thumb|right|250px|Aleksandran Süvärenan jumalaine]]
-'''Aleksandr (Amos) Süvären''' ([[venäkel'|ven.]] ''Александр (Амос) Свирский''; sünd. [[1448]], [[Sermaks]] — kol. [[30. eloku]] [[1533]], [[Aleksandriž-Süvären jumalankodi]]) oli venäläine [[Ortodoksine hristanuskond|ortodoksine]] pühämez', igumen. [[Vepsläižed|Vepsläine]].
+[[Fail:Vission of st. Alexander.jpg|thumb|right|250px|Süvärenan Aleksandran jumalaine]]
+'''Süvären Aleksandr (Amos)''' ([[venäkel'|ven.]] ''Александр (Амос) Свирский''; sünd. [[1448]], [[Sermaks]] — kol. [[30. eloku]] [[1533]], [[Aleksandriž-Süvären jumalankodi]]) oli venäläine [[Ortodoksine hristanuskond|ortodoksine]] pühämez', igumen. [[Vepsläižed|Vepsläine]].
 {{stub}}
 
 [[Kategorii:Vepsän pühämehed]]
