--- a/Vepsläižed.mw
+++ b/Vepsläižed.mw
@@ -117,7 +117,7 @@ Vepsän rahvahan amuižes istorijas tetas lüjas vähä.
 * [[Süvären Aleksandr]] — venäläine ortodoksine pühämez', igumen.
 * [[Jašdären Iona]] — venäläine ortodoksine pühämez'
 * [[Strogalščikova Zinaida|Zinaida Strogalščikova]] — politikanak.
-* [[Lisicina Anna|Anna Lisicina]] — [[Karjalaiž-Suomalaine Nevondkundaline Socialistine tazovaldkund|Karjalaiž-Suomalaižen Nevondkundaližen Socialistižen tazovaldkundan]] Kommunistižen partijan keskuzkomitetan sidonik, partizan. Hän om Nevondkundaližen Ühtištusen vägimez'.
+* [[Lisicina Anna|Anna Lisicina]] — [[Karjalaiž-Suomalaine Nevondkundaline Socialistine Tazovaldkund|Karjalaiž-Suomalaižen Nevondkundaližen Socialistižen Tazovaldkundan]] Kommunistižen partijan keskuzkomitetan sidonik, partizan. Hän om Nevondkundaližen Ühtištusen vägimez'.
 * [[Abramov Nikolai|Nikolai Abramov]] — vepsän runokirjutai, lehtezmez' da aktör.
 * [[Lonin Rürik|Rürik Lonin]] — Šoutjärven (Šoutarven) Vepsän etnografižen muzejan alusenpanii, runokirjutai.
 * [[Petuhov Anatolii|Anatolii Petuhov]] — vologdalaine kirjutai.
