--- a/Lonin_Rürik.mw
+++ b/Lonin_Rürik.mw
@@ -2,7 +2,7 @@
 
 == Kirjad ==
 * [[Lühüdad pajoižed]], Petroskoi.
-* [[Meiden rahvhan fol'klor‎]], Petroskoi: "Periodik", 2000.
+* [[Minun rahvhan fol'klor‎]], Petroskoi: "Periodik", 2000.
 
 == Irdkosketused ==
 * [http://www.vepsia.ru/ludi/lonin.php Rürikan Petrovičan boigrafii Vepsän kul'turan Sebran saital]
