*Empty MediaWiki Message*

--- a/Dendrilla_elegans.mw
+++ b/Dendrilla_elegans.mw
@@ -1,4 +1,4 @@
-'''''Dendrilla elegans''''' om [[gubkad|gupkoiden]] erik ''[[Dendrilla]]''-heimas. Avaiži da ümbrikirjuti vl. 1888 biolog Lendenfel'd.
+'''''Dendrilla elegans''''' om [[gubkad|gupkoiden]] erik ''[[Dendrilla]]''-heimos. Avaiži da ümbrikirjuti vl. 1888 biolog Lendenfel'd.
 
 Eläb [[Avstralii|Avstralijan]] randoidenno. Ei ole völ nimid rahvahaližil kelil.
 {{stub}}
