*Empty MediaWiki Message*

--- a/Ptychogena_antarctica.mw
+++ b/Ptychogena_antarctica.mw
@@ -1,4 +1,4 @@
-'''''Ptychogena antarctica''''' om [[meduzad|meduzoiden]] erik ''[[Ptychogena]]''-heimas. Avaiži da ümbrikirjuti vl. 1907 biolog Braun.
+'''''Ptychogena antarctica''''' om [[meduzad|meduzoiden]] erik ''[[Ptychogena]]''-heimos. Avaiži da ümbrikirjuti vl. 1907 biolog Braun.
 
 Eläb [[Antarktid]]an randoidenno. Ei ole völ nimid rahvahaližil kelil.
 {{stub}}
