*Empty MediaWiki Message*

--- a/Synodontis_pardalis.mw
+++ b/Synodontis_pardalis.mw
@@ -1,4 +1,4 @@
-'''''Synodontis pardalis''''' om [[kalad|kala]] ''[[Synodontis]]''-heimas. Avaiži da ümbrikirjuti vl. 1908 ihtiolog Bulenžer. Ezimeletaden, ei ole völ nimid rahvahaližil kelil.
+'''''Synodontis pardalis''''' om [[kalad|kala]] ''[[Synodontis]]''-heimos. Avaiži da ümbrikirjuti vl. 1908 ihtiolog Bulenžer. Ezimeletaden, ei ole völ nimid rahvahaližil kelil.
 
 [[Kamerun]]an endemik; eläb vaiše [[Dža (jogi)|Dža-joges]].
 {{stub}}
