--- a/Zanin_Artöm.mw
+++ b/Zanin_Artöm.mw
@@ -1,6 +1,6 @@
 '''Artöm Zanin''' ([[venäkel'|ven.]]: ''Артём Занин''; sünd. [[13. kül'mku]] [[1986]], [[Piter|Leningrad (nüg. Piter)]], [[Venäma]]) om venälaine [[fehtuind|mekatai]].
 
-Oti kuldmötal' mail'man čempionatal [[Pariž]]as (2011).
+Oti kuldmötalin mail'man čempionatal [[Pariž]]as (2011).
 {{stub}}
 
 [[Kategorii:Sportmehed]]
