*Empty MediaWiki Message*

--- a/Latinan_frazoiden_nimikirjutez.mw
+++ b/Latinan_frazoiden_nimikirjutez.mw
@@ -100,7 +100,8 @@
 
 
 === M ===
-
+* '''[[Magnum opus]]''' — «sur' tö»
+* '''[[Manus manum lavat]]''' — «käzi pezeb kät»
 
 === N ===
 * '''Nil inultum remanebit''' — «ni-mi ei jäta ustavzoitmata»
@@ -109,6 +110,7 @@
 * '''[[Nota bene]]''' — «kärouda homaičust»
 
 === O ===
+* '''[[O tempora! O mores!]]''' — «O aigad! O tabad!» ([[Ciceron]])
 * '''[[Omnes vulnerant, ultima necat]]''' — «kaikutte [čas] satatab, jäl'gmaine rikob»
 * '''[[Omnia mea mecum porto]]''' — «kaik ičein kandan kerdalaz»
 * '''Omnia praeclara rara''' — «kaik čomakulu om harv»
@@ -131,6 +133,7 @@
 * '''Sine cura''' — «holeta»
 * '''Sol lucet omnibus''' — «päiväine paštab kaikiden täht»
 * '''[[Sub rosa]]''' — «rozan al» ''(peitoiči)''
+* '''[[Suum cuique]]''' — «kaikele ičeze»
 
 === T ===
 * '''Te amo est verum''' — «armastan sindai — om toduz»
