*Empty MediaWiki Message*

--- a/Keimada_Grandi.mw
+++ b/Keimada_Grandi.mw
@@ -1,8 +1,8 @@
 [[Fail:Ilha da Queimada Grande - Itanhaém3.jpg|thumb|right|250px|Keimada Grandi]]
-[[Fail:Jararaca-ilhoa.jpg|thumb|left|250px|''[[Bothrops insularis]]'' — saren [[endemik]]kü, kudamb tegi hoštust sarele]]
+[[Fail:Jararaca-ilhoa.jpg|thumb|left|250px|''[[Bothrops insularis]]'' — saren [[endemik]]kü, kudamb tegi hoštusen sarele]]
 '''Keimada Grandi (Künsar')''' ([[portugalijan kel'|port.]]: ''Ilha da Queimada Grande'') om sar' [[Atlantine valdmeri|Atlantižiš valdmeriš]], mülüb [[Brazilii|Brazilijaha]].
 
-Sen pind om vaiše 0.43 km². Täs eläb ''[[Bothrops insularis]]'' — üks' kaikižiš varuližembad [[küd|küišpäi]] mail'mas. Arni necen kün tagapäi Keimada Grandi oti «kaikižen varuližemban saren» oficialitont arvod.
+Sen pind om vaiše 0.43 km². Täs eläb ''[[Bothrops insularis]]'' — üks' kaikiš varuližembiš [[küd|küišpäi]] mail'mas. Arni necen kün tagapäi Keimada Grandi oti «kaikižen varuližemban saren» oficialitont arvod.
 
 Sarel om [[lämoičuhunduz]]. [[Daiving]] i [[kalatez]] oma levedali levitadud Keimada Grandin randoidenno.
 {{stub}}
