*Empty MediaWiki Message*

--- a/C._C._Catch:an_pajod.mw
+++ b/C._C._Catch:an_pajod.mw
@@ -71,6 +71,7 @@ Sen psevdoniman al pajatai pästtud vaiše üks' pajo — «[[Jump In My Car]]»
 # ''[[Silence]]'' (2004)
 # ''[[Unborn Love]]'' (2010)
 # ''[[Super Nature Power|Super Nature Power (I Believe)]]'' (2010)
+# ''You Are My World'' (2010)
 {{C. C. Catch}}
 
 [[Kategorii:C. C. Catch:an pajod|*]]
