*Empty MediaWiki Message*

--- a/Tranzit_(fil'm,_2012).mw
+++ b/Tranzit_(fil'm,_2012).mw
@@ -1,4 +1,13 @@
 '''«Tranzit»''' ([[anglijan kel'|angl.]]: ''Transit'') om voden [[2012]] [[AÜV|amerikalaine]] trillerfil'm. Režissör — Antonio Negret.
+
+== Rolid ==
+* [[Kevizel Džim|Džim Kevizel]] – Neit
+* [[Frein Džeims|Džeims Frein]] – Marek
+* [[Beird Dajona|Dajona Beird]] – Ariel'
+* [[Röm Elizabet|Elizabet Röm]] – Robin
+* [[Perrin'jo Garol'd|Garol'd Perrin'jo]] – Loseida
+* [[Danahau Rajan|Rajan Danahau]] – Ivers
+* [[Nait Sterling|Sterling Nait]] – Shein
 {{stub}}
 
 [[Kategorii:Fil'mad kirjamišton mödhe]]
