/* Caro K-psevdoniman al */

--- a/C._C._Catch:an_pajod.mw
+++ b/C._C._Catch:an_pajod.mw
@@ -6,7 +6,7 @@ Se om täuz' '''[[C. C. Catch]]-pajatajan pajoiden kirjutez''' pordoiden i psevd
 # ''C'est la vie ([[Harris Emmilu|Emmylou Harris]] cover)''
 
 == ''Caro K''-psevdoniman al ==
-Sen psevdoniman al pajatai pästtud vaiše üks' pajo — «[[Jump In My Car]]» — [[1986]]-žes vodes. Nece kompizicii mülüi oficialitomha kogodushe, sen täht tundmatoi om, oli-ki «Caro K» hänen todesine psevdonim, vai se oli järgeline mistifikacii.
+Sen psevdoniman al pajatai pästtud vaiše üks' pajo — «[[Jump In My Car]]» — [[1986]]-žes vodes. Nece kompozicii mülüi oficialitomha kogodushe, sen täht tundmatoi om, oli-ki «Caro K» hänen todesine psevdonim, vai se oli järgeline mistifikacii.
 
 == ''C. C. Catch''-psevdoniman al ==
 
