--- a/Sana.mw
+++ b/Sana.mw
@@ -1,13 +1,9 @@
 {{1000}}
 '''Sana''' (vai '''vajeh''') om strukturine [[kel'|kelen]] ühtnik; služib erazvuiččiden [[leksik|leksižiden]] funkciojiden täht, ozutesikš, objektoiden nimitusale. Tedod, kudamb tedoidab sanoiden strukturad, kuctas [[morfologii|morfologijaks]].
 
-Om kaks' sanoiden tipad: [[päsana]]d {{k|знаменательные}} da [[specialine sana|specialižed sanad]].
+Om kaks' sanoiden tipad: [[täuz'znamasine sana|täuz'znamasižed]] da [[specialine sana|specialižed sanad]].
 {{stub}}
 
 [[Kategorii:Sanad|*]]
 [[Kategorii:Morfologii]]
 [[Kategorii:Leksikologii]]
-
-[[la:Dictio]]
-[[new:खंग्वः]]
-[[zh:單字]]
