--- a/Azerbaidžanine_pahlav.mw
+++ b/Azerbaidžanine_pahlav.mw
@@ -1,5 +1,5 @@
 [[Fail:Azərbaycan paxlavası.jpg|thumb|right|250px|Azerbaidžanalaine pahlav]]
-'''Azerbaidžanalaine pahlav''' ([[azerbaidžanan kel'|azer.]]: ''azərbaycan paxlavası'') om '''[[pahlav]]an''' eriline tip, kudamb om populärine [[Azerbaidžan]]as da [[Venäma]]s. Om [[septahtaz|septahthaspäi]], [[pähkim|pähkmišpäi]] (tobjimalaz nece om [[funduk]] vai [[grekalaine pähkim]]) da erazvuiččiden vürtoišpäi {{k|пряностей}}.
+'''Azerbaidžanalaine pahlav''' ([[azerbaidžanan kel'|azer.]]: ''azərbaycan paxlavası'') om '''[[pahlav]]an''' eriline tip, kudamb om populärine [[Azerbaidžan]]as da [[Venäma]]s. Om [[septahtaz|septahthaspäi]], [[pähkim|pähkmišpäi]] (tobjimalaz nece om [[funduk]] vai [[grekalaine pähkim]]) da erazvuiččiden [[eriližmagutez|eriližmagutesišpäi]].
 
 == Kacu mugažo ==
 * [[Pahlav]]
