--- a/Pornolab.net.mw
+++ b/Pornolab.net.mw
@@ -1,6 +1,6 @@
 '''pornolab.net''' om [[Venäma|venälaine]] [[BitTorrent-treker]] [[erotik|erotižen]] da [[pornografii|pornografižen]] südäiolendanke, [[rutracker.org]]-saitan projekt.
 
-Nece om kaikiš suremb pornotreker mail'mas da [[Runet|venälaižes Internetsegmentas]] kaikžuses {{k|в частности}}. Om enamb mi 1,8 aktivišt kävutajad da läz 270 tuhad torrentjagajad {{k|раздач}}.
+Nece om kaikiš suremb pornotreker mail'mas da [[Runet|venälaižes Internetsegmentas]] sen paloin. Om enamb mi 1,8 aktivišt kävutajad da läz 270 tuhad torrentjagajad {{k|раздач}}.
 
 Om populärine ei vaiše Venämas, no toižiš mail'man valdkundoiš-ki. Saitad napriba hal'g kel'ta; sen serverad hal'g oigenzihe ühtes valdkundaspäi toižehe.
 
