--- a/Lužkovan_stil'.mw
+++ b/Lužkovan_stil'.mw
@@ -1,5 +1,5 @@
 [[Fail:Wiki Egg House, Mashkova Street, Moscow, Russia.jpg|thumb|right|250px|„Kodi-muna“]]
-M. k. '''„Lužkovan stil'“''' om [[neologizm]] [[Moskv]]an stiližiden eriližusiden znamoičendan täht [[Lužkov Jurii|Jurijan Lužkovan]] lidnanohjandusen {{k|градоуправления}} pordos.
+M. k. '''„Lužkovan stil'“''' om [[neologizm]] [[Moskv]]an stiližiden eriližusiden znamoičendan täht [[Lužkov Jurii|Jurijan Lužkovan]] lidnanohjandusen pordos.
 
 Lužkovan sauvusiden pästilid oma [[postmodernizm]], [[eklektik (stil')|eklektik]], [[istorizm]], [[kitč]]. Harakterizuidud pertišton sistematomusel.
 
