*Empty MediaWiki Message*

--- a/Spellbound_Tour_2009.mw
+++ b/Spellbound_Tour_2009.mw
@@ -2,7 +2,7 @@
 * Turan augotiž — [[4. heinku]] [[2009]], [[El' Paso (Tehas)|El' Paso]] ([[AÜV]])
 * Turan lopind — [[11. eloku]] [[2009]], [[Kolorado Springs]] ([[AÜV]])
 
-Gruppan huldundas {{k|на «разогреве»}} oli [[Kill Hannah]]-, [[Seventh Void]]- da [[Dommin]]-kollektivad.
+Gruppan hulduteses oli [[Kill Hannah]]-, [[Seventh Void]]- da [[Dommin]]-kollektivad.
 {{stub}}
 {{Lacuna Coil}}
 
