*Empty MediaWiki Message*

--- a/Thomas.mw
+++ b/Thomas.mw
@@ -2,7 +2,7 @@
 
 Kaikiš tetabamb produkcii oma [[pölünimurič]]ad da centrifugad sobiden puzerdusen täht.
 
-Tütärkompanii {{k|дочерняя компания}} — «[[Thomas Magnete]]» (tegeb [[1962]]-žen vodelpäi).
+Tütärkompanii — «[[Thomas Magnete]]» (tegeb [[1962]]-žen vodelpäi).
 {{stub}}
 
 [[Kategorii:Kompanijad kirjamišton mödhe]]
