--- a/The_Hottest_Chicks_in_Metal_Tour_2007.mw
+++ b/The_Hottest_Chicks_in_Metal_Tour_2007.mw
@@ -2,7 +2,7 @@
 * Turan augotiž — [[24. keväz'ku]] [[2007]], [[Kenoš (Viskonsin)|Kenoš]] ([[AÜV]])
 * Turan lopind — [[7. kezaku]] [[2007]], [[Kolorado Springs]] ([[AÜV]])
 
-Gruppan huldundas {{k|на «разогреве»}} oli [[In This Moment]]-, [[Stolen Babies]]- da [[Kylesa]]-kollektivad.
+Gruppan hulduteses oli [[In This Moment]]-, [[Stolen Babies]]- da [[Kylesa]]-kollektivad.
 {{stub}}
 {{Lacuna Coil}}
 
