--- a/Cut_the_Rope.mw
+++ b/Cut_the_Rope.mw
@@ -1,6 +1,6 @@
 '''«Cut the Rope»''' (''„Čapa nor“'') om [[2010]]-žen voden [[Venäma|venälaine]] mobiline/[[kompjutervänd]] [[jügedvänd]]-žanras {{k|в жанре головоломки}}, [[Android]]- i [[iOS]]-platformoile. Sen sädai om «[[ZeptoLab]]».
 
-Päiči originaližes vändos, oma mülütad jatkoid — ''Cut the Rope: Experiments'' (2011) da ''Cut the Rope: Time Travel'' (2013). Originaline vändpala om lujas populärine kaiked mail'madme: [[2013]]-žen vodenno läz 250 millionad ristitud skačiba {{k|скачали}} sen.
+Päiči originaližes vändos, oma mülütad jatkoid — ''Cut the Rope: Experiments'' (2011) da ''Cut the Rope: Time Travel'' (2013). Originaline vändpala om lujas populärine kaiked mail'madme: [[2013]]-žen vodenno läz 250 millionad ristitud kormiba sen.
 
 Vändon geroi — simpatine olii ''Am-Näm''-nimen al ([[anglijan kel'|angl.]]: ''Om Nom'', [[venäkel'|ven.]]: ''Ам Ням''), kudambale pidab antta magedusid noran abul. Ezmäižed märad oma kebnad; no möhembaižil ottas palakahembad tugedused.
 
