*Empty MediaWiki Message*

--- a/Tur_de_Frans.mw
+++ b/Tur_de_Frans.mw
@@ -1,5 +1,5 @@
 [[Fail:TourDeFrance 2005 07 09.jpg|thumb|right|250px|Voibištelendan aigan]]
-'''«Tur de Frans»''' ([[francijan kel'|franc.]]: ''Le Tour de France'') om kaikiš tetabamb i prestižežemb [[velovoibuižed]] mail'mas. Mänetab enamb 100 vot (vlpäi [[1903]]) [[Francii|Francijas]], [[heinku]]n aigan. Organizator — «[[Amaury Sport Organisation]]».
+'''«Tur de Frans»''' ([[francijan kel'|franc.]]: ''Le Tour de France'') oma kaikiš tetabamb i prestižežemb [[velovoibuižed]] mail'mas. Mänetab enamb 100 vot (vlpäi [[1903]]) [[Francii|Francijas]], [[heinku]]n aigan. Organizator — «[[Amaury Sport Organisation]]».
 
 Venäman ezitajad ei nikonz linnugoi Tur de Fransan vägestajikš.
 {{stub}}
