--- a/Subway_Surfers.mw
+++ b/Subway_Surfers.mw
@@ -1,6 +1,6 @@
 '''«Subway Surfers»''' om [[2012]]-žen voden [[Danii|danijalaine]] mobiline/[[kompjutervänd]] [[arkad]]-žanras, [[Android]]- i [[iOS]]-platformoile. Sen sädajad oma «[[Kiloo]]» da «[[SYBO Games]]».
 
-Nece om lujas populärine vänd: [[2013]]-žen vodenno läz 250 millionad ristitud skačiba {{k|скачали}} sen.
+Nece om lujas populärine vänd: [[2013]]-žen vodenno läz 250 millionad ristitud kormiba sen.
 
 Nece om „agjatoi“ vänd. Süžetan mödhe, personaž-[[graffiti]]mez' jokseb pagoho inspektoraspäi i hänen koiraspäi [[raudte]]dme, miše lähtta aznoičendaspäi pirdud jonusehe. Kaik om 16 personažad, sidä kesken pägerojad — Džeik (''Jake''), Triki (''Tricky'') da Freš (''Fresh'').
 {{stub}}
