*Empty MediaWiki Message*

--- a/Jumal.mw
+++ b/Jumal.mw
@@ -10,7 +10,7 @@
 * [[Jumalnaine]]
 * [[Teizm]]
 * [[Deizm]]
-* [[Jumalantedo]] {{k|богословие}}
+* [[Jumalantedo]]
 * [[Mail'mheng]]
 * [[Jumalan olendan kuzund]]
 * [[Metafizik]]
