--- a/Cyrtophrys_lynchii.mw
+++ b/Cyrtophrys_lynchii.mw
@@ -1,4 +1,4 @@
-'''''Cyrtophrys lynchii''''' om [[zver'kärbhaižed|zver'kärbhaižiden]] {{k|ктырей}} erik ''[[Asilidae]]''-sugukundas. Avaiži da ümbrikirjuti vl. 1904 entomolog Bret.
+'''''Cyrtophrys lynchii''''' om [[sordaikärbhaižed|sordaikärbhaižiden]] erik ''[[Asilidae]]''-sugukundas. Avaiži da ümbrikirjuti vl. 1904 entomolog Bret.
 
 [[Gajan]]an [[endemik]]. Necil lipkaižel, ezimeletaden, ei ole völ nimid rahvahaližil kelil.
 {{stub}}
