*Empty MediaWiki Message*

--- a/Ühten_kirjan_kirjutai.mw
+++ b/Ühten_kirjan_kirjutai.mw
@@ -5,7 +5,7 @@
 * '''[[Eršov Pötr|Pötr Eršov]]''' — [[Hebohut-gurbačut]]
 * '''[[Mitčell Margaret|Margaret Mitčell]]''' — [[Tullejan jäl'ghe (roman)|Tullejan jäl'ghe]]
 * '''[[Štil'mark Robert|Robert Štil'mark]]''' — [[Jälgestai Kal'kuttaspäi]]
-* '''[[Li Harper|Harper Li]]''' — [[Rikta peresmešnikad]]
+* '''[[Li Harper|Harper Li]]''' — [[Rikta nagranzoitajad]]
 da toižed.
 
 == Kacu mugažo ==
