*Empty MediaWiki Message*

--- a/Modern_Talking.mw
+++ b/Modern_Talking.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = 
  | Sait = http://www.sonymusic.de/Modern-Talking
 }}
-'''«Modern Talking»''' oli legendine [[Saksanma|saksalaine]] [[sintipop]]grupp [[Hamburg]]aspäi, vodespäi [[1984]] da vodehesai [[2003]]. Mülükund oli ''[[Tomas Anders]]'' da ''[[Bolen Diter|Diter Bolen]]''.
+'''«Modern Talking»''' oli legendine [[Saksanma|saksalaine]] [[sintipop]]grupp [[Hamburg]]aspäi, vodespäi [[1984]] da vodehesai [[2003]]. Mülükundas oli ''[[Tomas Anders]]'' da ''[[Bolen Diter|Diter Bolen]]''.
 
 == Diskografii ==
 {{kacu|Modern Talking:an diskografii}}
