--- a/Оять-ёген_рандал....mw
+++ b/Оять-ёген_рандал....mw
@@ -9,6 +9,7 @@ Nece kirj om ezmäine kirilline pästand vepsän kelel [[1992]] vodelpäi.
 == Irdkosketused ==
 * [http://veps-kir.ucoz.ru/blog/ojat_jogen_randal/2013-06-17-19 Necen kirjan polhe VVIKP:an blogal]
 * [http://finugor.ru/node/41491 Uzištuz necen kirjan polhe Finugor-portalal]
+* [http://petrozavodsk.rfn.ru/region/rnews.html?id=1537165&rid=49843 Karjalan radion oigenduz necen kirjan polhe]
 
 [[Kategorii:Kirjad kirjamišton mödhe]]
 [[Kategorii:Kirjad vepsän kelel]]
