--- a/Santa_Marija_Podžo.mw
+++ b/Santa_Marija_Podžo.mw
@@ -1,3 +1,4 @@
+[[File:Santamatiapoghju.jpg|thumb|Santa Marija Podžo]]
 '''Santa Marija Podžo''' ([[francijan kel'|franc.]]: ''Santa-Maria-Poggio'', [[korsikan dialekt|kors.]]: ''Santa Maria di u Poghju'') om lidn [[Francii|Francijas]].
 {{stub}}
 
