--- a/Francijan_kel'.mw
+++ b/Francijan_kel'.mw
@@ -1,6 +1,6 @@
 {{1000}}
 [[Fail:Map-Francophone World.png|thumb|right|250px|Levigandusen kart]]
-'''Francijan kel'''' (''Français'') om üks' ibero-romanižiš, indoevropalaižiš kelišpäi. 
+'''Francijan kel'''' (''Français'') om üks' gallo-romanižiš, indoevropalaižiš kelišpäi. 
 
 Se om [[Francii|Francijan]], [[Kanad]]an, [[Monak]]an, [[Bel'gii|Bel'gijan]], [[Lüksemburg]]an i toižiden valdkundoiden valdkundkel'. Pagižijoiden lugu om läz 270 millionad ristitud. 
 
