*Empty MediaWiki Message*

--- a/Oksitanan_kel'.mw
+++ b/Oksitanan_kel'.mw
@@ -1,7 +1,7 @@
 [[Fail:Occitania blanck map.PNG|thumb|right|250px|Levigandusen kart]]
-'''Oksitanan kel'''' (''Occitan'') om üks' okcitano-romanižiš, indoevropalaižiš kelišpäi.
+'''Oksitanan kel'''' (''occitan'', ''lenga d'òc'') om üks' oksitano-romanižiš, indoevropalaižiš kelišpäi, kudambal pagištas [[Francii|Francijas]].
 
-Okcitan kirjkel' om [[Latinan kirjamišt|latinan kirjamišton]] pohjal.
+Oksitanan kirjkel' om [[Latinan kirjamišt|latinan kirjamišton]] pohjal.
 {{stub}}
 
 [[Kategorii:Keled i dialektad kirjamišton mödhe]]
