*Empty MediaWiki Message*

--- a/Оять-ёген_рандал....mw
+++ b/Оять-ёген_рандал....mw
@@ -1,6 +1,6 @@
 [[Fail:Оять-ёген_рандал....jpg|right|thumb|150px|Pästandan kirjankor']]
 
-'''"Оять-ёген рандал..."''' om [[Abramov Nikolai|Nikolajan Abramovan]] kirilline runokogoduz. Se om pästtud [[2013]] vodel [[Piter]]iš. Kirjan tegii om [[Kuznecov Maksim|Maksim Kuznecov]].
+'''"Оять-ёген рандал..."''' (oficialižes latinan orfografijas — ''Ojat'-jogen randal...'') om [[Abramov Nikolai|Nikolajan Abramovan]] kirilline runokogoduz. Se om pästtud [[2013]] vodel [[Piter]]iš. Kirjan tegii om [[Kuznecov Maksim|Maksim Kuznecov]].
 
 Kirjaha mülüi enamba [[90 (lugu)|90]] runod da runokändmižid. Kirjankorel om N. Abramovan fotokuva hänen "Vauktan vesin kuvastuz"-fotoozutelendalpäi.
 
