*Empty MediaWiki Message*

--- a/Nekrorealizm.mw
+++ b/Nekrorealizm.mw
@@ -1,6 +1,6 @@
 '''Nekrorealizm''' om čomamahtoine čuraduz, kudamb sündui 1980-den voziden augotišes [[Piter|Leningradha]].
 
-Nekrorealizman tataks lugese [[Jufit Jevgenii|Jevgenii Jufit]]. Nece žanr sündui kuti rezul'tad, konz jouk norid mehid imitirui torid mecoiš ümbriže Leningradas, lidnanläheližes jonusiš, tanhiš, sauvondtahoiš dai fateriš. Nenid tegendoid Jufit fil'mzi 8-millimetrižhe kertheze.
+Nekrorealizman tataks lugese [[Jufit Jevgenii|Jevgenii Jufit]]. Nece žanr sündui kuti rezul'tad, konz jouk norid mehid imitirui torid mecoiš ümbriže Leningradas, lidnanläheližiš jonusiš, tanhiš, sauvondtahoiš dai fateriš. Nenid tegendoid Jufit fil'mzi 8-millimetrižhe kertheze.
 
 {{stub}}
 
