*Empty MediaWiki Message*

--- a/Tedr.mw
+++ b/Tedr.mw
@@ -1,5 +1,5 @@
 [[Fail:Black Grouse Nationalpark Bayerischer Wald.jpg|thumb|right|225px|Tedr]]
-'''Tedr''' ([[Latinan kel'|lat.]]: ''Lyrurus'') om [[lind]].
+'''Tedr''' ([[Latinan kel'|lat.]]: ''Lyrurus tetrix'') om [[lind]].
 {{stub}}
 
 [[Kategorii:Lindud]]
