*Empty MediaWiki Message*

--- a/ETA.mw
+++ b/ETA.mw
@@ -1,4 +1,4 @@
-[[Fail:Eta zigilua.jpg|thumb|right|200px|ETA:n emblem]]
+[[Fail:Euskadi Ta Askatasuna.svg|thumb|right|215px|ETA:n simvol]]
 '''ETA''' ([[Baskan kel'|bask.]] ''ЕТА'', ''Euskadi Ta Askatasuna'' — «Baskanma i vald») om [[baskalaižed|baskalaine]] huraradikaline, nacionalistine separatistoiden organizacii, kudamb voibištelese [[Baskanma]]n (region [[Ispanii|Ispanijan]] pohjoižes da [[Francii|Francijan]] ehtbokas) ripmatomuden taga. Om tehtud vl [[1959]].
 
 {{stub}}
