--- a/Niinistö_Sauli.mw
+++ b/Niinistö_Sauli.mw
@@ -1,6 +1,6 @@
 [[File:Sauli Niinistö.jpg|thumb|Sauli Niinistö]]
 
-'''Sauli Niinistö''' (24.8.[[1948]]) oli [[Suomenma|Suomenman Tazovaldkundan]] prezident (2012-).
+'''Sauli Niinistö''' (24.8.[[1948]]) om [[Suomenma|Suomenman Tazovaldkundan]] prezident (2012-).
 
 {{stub}}
 [[Kategorii:Valdkundmehed]]
