--- a/Suomenma.mw
+++ b/Suomenma.mw
@@ -31,15 +31,15 @@ Suomenman Prezidentoiden nimikirjutez:
 * [[Štol'berg Kaarlo Juho|Kaarlo Juho Štol'berg]] (1919-1925)
 * [[Relander Lauri Kristian|Lauri Kristian Relander]] (1925-1931)
 * [[Svinhufvud Per Evind]] (1931-1937)
-* [[Kyösti Kallio]] (1937-1940)
-* [[Risto Ryti]] (1940-1944)
-* [[Carl Gustaf Emil Mannerheim]] (1944-1946)
-* [[Juho Kusti Paasikivi]] (1946-1956)
-* [[Urho Kekkonen]] (1956-1982)
-* [[Mauno Koivisto]] (1982-1994)
-* [[Martti Ahtisaari]] (1994-2000)
+* [[Kallio Küösti|Küösti Kallio]] (1937-1940)
+* [[Rüti Risto|Risto Rüti]] (1940-1944)
+* [[Mannerhaim Karl Gustaf Emil'|Karl Gustaf Emil' Mannerhaim]] (1944-1946)
+* [[Paasikivi Juho Kusti|Juho Kusti Paasikivi]] (1946-1956)
+* [[Kekkonen Urho|Urho Kekkonen]] (1956-1982)
+* [[Koivisto Mauno|Mauno Koivisto]] (1982-1994)
+* [[Ahtisaari Martti|Martti Ahtisaari]] (1994-2000)
 * [[Halonen Tarja|Tarja Halonen]] (2000-2012)
-* [[Sauli Niinistö|Niinistö Sauli]] (2012-)
+* [[Niinistö Sauli|Sauli Niinistö]] (2012-)
 
 == Geografijan andmused ==
 
