*Empty MediaWiki Message*

--- a/Kodima.mw
+++ b/Kodima.mw
@@ -1,5 +1,5 @@
-[[Image:Логотип Kodima.PNG|thumb|right|300px|Lehtesen logotip]]
-'''"Kodima"''' om [[Vepsän kel'|vepsänkel'ne]] da [[Venäkel'|venäkel'ne]] lehtez, kudamb päzub [[Petroskoi|Petroskoiš]].
+[[Fail:Логотип Kodima.PNG|thumb|right|300px|Lehtesen logotip]]
+'''«Kodima»''' om [[Vepsän kel'|vepsänkel'ne]] da [[Venäkel'|venäkel'ne]] lehtez, kudamb päzub [[Petroskoi|Petroskoiš]].
 
 Vlpäi 1991 se lähtli ku ližanomerad "Prionežje"-lehteshe, sid' vlpäi 1993 linni ičenaižeks lehteseks. Päredaktorad — [[Zaiceva Nina|N. Zaiceva]], [[Fomin Nikolai|N. Fomin]], [[Nikolai Abramov|N. Abramov]]. Nügüdläine päredaktor om [[Ginijatullina Marina|Marina Ginijatullina]].
 
