--- a/ƛ̓.mw
+++ b/ƛ̓.mw
@@ -1,7 +1,7 @@
 <div style="float:right; margin: 0 0 0.2em 0.2em; padding: 0.2em 0.6em; font-size: 350%; line-height: 1.1em; background-color: #ddddff; border: 1px solid #aaaaff;"><span class="Unicode">ƛ̓ƛʼ</span></div>
 '''ƛ̓ (ƛʼ)''' om [[latinan kirjamišt]]on kirjam.
 
-Om [[Pohjoižamerik]]an indejan keliden rivel, ozutesikš, [[komoksan kel'|komoksan]] i [[tompsonan kel'|tompsonan]] kelil.
+Om [[Pohjoižamerik]]an indejan keliden rivel, ozutesikš, [[komoksan kel'|komoksan]] i [[tompsonan kel'|tompsonan]] keliš.
 
 == Irdkosketused ==
 {{Commons|ƛ̓|ƛ̓-kirjam}}
