--- a/C._C._Catch:an_videografii.mw
+++ b/C._C._Catch:an_videografii.mw
@@ -12,7 +12,7 @@ Se om täuz' '''[[C. C. Catch]]-pajatajan muzikklipoiden kirjutez'''.
 # ''[[Summer Kisses]]'' (1988 — Big Fun)
 # ''[[Big Time]]'' (1989 — [[Hear What I Say]])
 # ''[[Midnight Hour]]'' (1989 — Hear What I Say)
-# ''Megamix '98'' (1998 —[[Best of '98]])
+# ''[[C. C. Catch Megamix '98|Megamix '98]]'' (1998 —[[Best of '98]])
 # ''[[I Can Lose My Heart Tonight '98]]'' (1998 — [[Best of '98]])
 # ''[[Shake Your Head]]'' (2003)
 # ''[[Silence]]'' (2004)
