*Empty MediaWiki Message*

--- a/Kazmused.mw
+++ b/Kazmused.mw
@@ -42,4 +42,5 @@ Kazmusid tedoidab [[botanik]].
 
 {{stub}}
 [[Kategorii:Biologii]]
-[[Kategorii:Botanik]]
+[[Kategorii:Botanik|*]]
+[[Kategorii|Kazmused|*]]
