*Empty MediaWiki Message*

--- a/Vargas_Dorangel'.mw
+++ b/Vargas_Dorangel'.mw
@@ -1,6 +1,6 @@
-'''Hose Dorangel' Vargas Gomes''' ([[ispanijan kel'|isp.]]: ''José Dorángel Vargas Gómez'') a. k. a. '''El' Komegente''' ([[ispanijan kel'|isp.]]: '' El Comegente'') vai '''[[Andad|Andoiden]] [[Gannibal Lekter]]''' (sünd. [[14. semendku]] [[1957]], [[Kan'jo Sankudo]], [[Venesuel]]) om venesuelalaine koditoi serijaine rikoi, [[man'jak]], [[kannibalizm|kannibal]] da meletoi. 
+'''Hose Dorangel' Vargas Gomes''' ([[ispanijan kel'|isp.]]: ''José Dorángel Vargas Gómez'') a. k. a. '''El' Komegente''' ([[ispanijan kel'|isp.]]: '' El Comegente'') vai '''[[Andad|Andoiden]] [[Gannibal Lekter]]''' (sünd. [[14. semendku]] [[1957]], [[Kan'jo Sankudo]], [[Venesuel]]) om venesuelalaine koditoi serijaine rikoi, [[man'jak]], [[kannibalizm|kannibal]] da meletoi. Rikoi i söi enamb 10 ristitud, kaik tetabišpäi žertvoišpäi oli [[mez'|mehed]].
 
-Rikoi i söi enamb 10 ristitud, kaik tetabišpäi žertvoišpäi oli [[mez'|mehed]]. Hän söi vaiše mehid (tobjimalaz sportmehid i sijaližid radajid): naižed, hänen mel'pidegan mödhe, oma „magutomad“, sangeričuiš om „äi [[holesterin]]oid“, a vanhušid oma „lujas požastoitud, miše söda heid“. Ičenägubha diagnozha i sijaližiden eläjiden vastustushe kacmata, Vargas oli sittud i om [[türm]]as.
+Hän söi vaiše mehid (tobjimalaz sportmehid i sijaližid radajid): naižed, hänen mel'pidegan mödhe, oma „magutomad“, sangeričuiš om „äi [[holesterin]]oid“, a vanhušid oma „lujas požastoitud, miše söda heid“. Ičenägubha diagnozha i sijaližiden eläjiden vastustushe kacmata, Vargas oli sittud i om [[türm]]as.
 {{stub}}
 
 [[Kategorii:Rikojad kirjamišton mödhe]]
