*Empty MediaWiki Message*

--- a/Trut_or_Konsekuenses.mw
+++ b/Trut_or_Konsekuenses.mw
@@ -1,5 +1,5 @@
-[[File:Truth or Consequences New Mexico City Hall.jpg|thumb|right|250px|Trut-or-Korsekuenses]]
-'''Trut-or-Korsekuenses''' om lidn [[Amerikan Ühtenzoittud Štatad|Amerikas]].
+[[File:Truth or Consequences New Mexico City Hall.jpg|thumb|right|250px|Trut or Korsekuenses]]
+'''Trut or Korsekuenses''' om lidn [[Amerikan Ühtenzoittud Štatad|Amerikas]].
 
 Pind om 33,1 km². Eläjiden lugu om 7.289 ristituid.
 {{stub}}
