--- a/Venälaižen_valdkundan_pämehed.mw
+++ b/Venälaižen_valdkundan_pämehed.mw
@@ -58,7 +58,7 @@ Se om '''täuz' Venälaižen valdkundan pämehiden nimikirjutez'''.
 # [[Vasilii III]] (1505—1533)
 # [[Ivan IV Äred]] (1533—1575, 1576—1584)
 # [[Simeon Bekbulatovič]] (1575—1576)
-# [[Födor I Sor'mel Tehtud]] (1584—1598)
+# [[Födor I Urad]] (1584—1598)
 
 == [[Smut|Smutan pord]] ==
 # [[Irina Godunova]] (1598)
